- kopie aus Altprjekt

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,22 @@
-@(message: String)
+@main("FiveHeads - Willkommen") {
+    <div class="container"><!-- container -->
 
-@main("Welcome to Play") {
+        <h1>Willkommen - Prototyp 0.1</h1>
 
-    @play20.welcome(message, style = "Java")
+        <div class="panel panel-primary">
+            <div class="panel-body">
+                <h3>Erste Version! Zur Zeit funktioniert:</h3>
+                <ul>
+                    <li>Artikelliste (zeigt alle Artikel in der Datenbank)</li>
+                    <li>Neue Artikel anlegen</li>
+                    <li>Login/Logout (Nur ein User in der Datenbank, Registrierung noch nicht möglich)</li>
+                </ul>
 
+                <h3>ToDo:</h3>
+                <ul>
+                    <li>five heads Logo entwerfen!</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 }
