--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,154 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>@title</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Avant">
+	<meta name="author" content="five heads solutions">
 
-<html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-    </head>
-    <body>
+    <!-- <link href="assets/less/styles.less" rel="stylesheet/less" media="all">  -->
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" type="text/css">
+
+	<!-- The following CSS are included as plugins and can be removed if unused-->
+    <link rel="stylesheet" type="text/css" href="assets/js/jqueryui.css">
+
+<!--link rel="stylesheet" type="text/css" href="assets/plugins/codeprettifier/prettify.css" />
+<link rel="stylesheet" type="text/css" href="assets/plugins/form-toggle/toggles.css" />
+<link rel="stylesheet" type="text/css" href="assets/js/jqueryui.css">
+<link rel="stylesheet" type="text/css" href="assets/plugins/form-daterangepicker/daterangepicker-bs3.css">
+<link rel="stylesheet" type="text/css" href="assets/plugins/jqueryui-timepicker/jquery.ui.timepicker.css"-->
+
+
+<!-- <script type="text/javascript" src="assets/js/less.js"></script> -->
+    <script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="assets/js/jqueryui-1.10.3.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="assets/js/enquire.js"></script>
+
+    <script type="text/javascript" src="assets/js/jquery.nicescroll.min.js"></script>
+    <!--script type="text/javascript" src="assets/plugins/codeprettifier/prettify.js"></script>
+    <script type="text/javascript" src="assets/plugins/easypiechart/jquery.easypiechart.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/sparklines/jquery.sparklines.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/form-toggle/toggle.min.js"></script>
+    <script type="text/javascript" src="assets/js/placeholdr.js"></script-->
+    <script type="text/javascript" src="assets/js/application.js"></script>
+    <script type="text/javascript" src="assets/js/AppHelper.js"></script>
+</head>
+
+<body class="">
+
+    <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
+        <a id="leftmenu-trigger" class="tooltips" data-toggle="tooltip" data-placement="right" title="Toggle Sidebar"></a>
+
+        <div class="navbar-header pull-left">
+            <a class="navbar-brand" href="@controllers.routes.Application.index">Five Heads Solutions</a>
+        </div>
+
+        <ul class="nav navbar-nav pull-right toolbar">
+        	<li class="dropdown">
+        		<a href="extras-blank.php.html#" class="dropdown-toggle username" data-toggle="dropdown"><span class="hidden-xs">Max Mustermann<i class="fa fa-caret-down"></i></span><img src="assets/demo/avatar/dangerfield.png" alt="Dangerfield" /></a>
+        		<ul class="dropdown-menu userinfo arrow">
+        			<li class="username">
+                        <a href="extras-blank.php.html#">
+        				    <div class="pull-left"><img class="userimg" src="assets/demo/avatar/dangerfield.png" alt="Jeff Dangerfield"/></div>
+        				    <div class="pull-right"><h5>Howdy, Max!</h5><small>Logged in as <span>user275</span></small></div>
+                        </a>
+        			</li>
+        			<li class="userlinks">
+        				<ul class="dropdown-menu">
+        					<li><a href="extras-blank.php.html#">Edit Profile <i class="pull-right fa fa-pencil"></i></a></li>
+        					<li><a href="extras-blank.php.html#">Account <i class="pull-right fa fa-cog"></i></a></li>
+        					<li><a href="extras-blank.php.html#">Help <i class="pull-right fa fa-question-circle"></i></a></li>
+        					<li class="divider"></li>
+        					<li><a href="@controllers.routes.Application.logout" class="text-right">Sign Out</a></li>
+        				</ul>
+        			</li>
+        		</ul>
+        	</li>
+        	<li class="dropdown">
+        		<a href="extras-blank.php.html#" class="hasnotifications dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i><span class="badge">1</span></a>
+        		<ul class="dropdown-menu messeges arrow">
+        			<li>
+        				<span>You have 1 new message(s)</span>
+        				<span><a href="extras-blank.php.html#">Mark all Read</a></span>
+        			</li>
+        			<li><a  class="dd-viewall" href="extras-blank.php.html#">View All Messages</a></li>
+        		</ul>
+        	</li>
+        	<li class="dropdown">
+        		<a href="extras-blank.php.html#" class="hasnotifications dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="badge">3</span></a>
+        		<ul class="dropdown-menu notifications arrow">
+        			<li>
+        				<span>You have 3 new notification(s)</span>
+        				<span><a href="extras-blank.php.html#">Mark all Seen</a></span>
+        			</li>
+        			<li>
+        				<a href="extras-blank.php.html#" class="notification-success">
+        					<span class="time">18 hrs</span>
+        					<i class="fa fa-check"></i>
+        					<span class="msg">Account Created. </span>
+        				</a>
+        			</li>
+        			<li><a href="extras-blank.php.html#" class="dd-viewall">View All Notifications</a></li>
+				</ul>
+			</li>
+		</ul>
+    </header>
+
+    <div id="page-container">
+        <!-- BEGIN SIDEBAR -->
+        <nav id="page-leftbar" role="navigation">
+                <!-- BEGIN SIDEBAR MENU -->
+            <ul class="acc-menu" id="sidebar">
+
+
+                <li><a href="@controllers.routes.Articles.articlelist"><i class="fa fa-list"></i> <span>Artikelliste</span></a></li>
+
+
+            </ul>
+            <!-- END SIDEBAR MENU -->
+        </nav>
+
+
+<div id="page-content">
+	<div id="wrap">
+		<div id="page-heading">
+			<ol class="breadcrumb">
+				<li><a href="@controllers.routes.Application.index">Dashboard</a></li>
+			</ol>
+
+		</div>
+
         @content
-    </body>
+
+	</div> <!--wrap -->
+</div> <!-- page-content -->
+
+    <footer role="contentinfo">
+        <div class="clearfix">
+            <ul class="list-unstyled list-inline">
+                <li>five head solutions &copy; 2013</li>
+                <button class="pull-right btn btn-inverse-alt btn-xs hidden-print" id="back-to-top"><i class="fa fa-arrow-up"></i></button>
+            </ul>
+        </div>
+    </footer>
+
+</div> <!-- page-container -->
+
+<!--
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
+<script>!window.jQuery && document.write(unescape("%3Cscript src="assets/js/jquery-1.10.2.min.js"%3E%3C/script%3E"))</script>
+<script type="text/javascript">!window.jQuery.ui && document.write(unescape("%3Cscript src="assets/js/jqueryui-1.10.3.min.js"))</script>
+-->
+
+
+
+</body>
 </html>
