--- a/app/views/articlelist.scala.html
+++ b/app/views/articlelist.scala.html
@@ -9,8 +9,8 @@
                   @views.html.article(article)
               }
         </div>
-        <a href="@controllers.routes.Articles.newarticle" class="btn btn-default">Neuer Artikel</a>
-        <a href="@controllers.routes.Articles.deleteAll" class="btn btn-default">Alle Löschen</a>
+        <a href="@controllers.routes.ArticleController.newarticle" class="btn btn-default">Neuer Artikel</a>
+        <a href="@controllers.routes.ArticleController.deleteAll" class="btn btn-default">Alle Löschen</a>
     </div>
 
 }
