--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -107,7 +107,7 @@
             <ul class="acc-menu" id="sidebar">
 
 
-                <li><a href="@controllers.routes.Articles.articlelist"><i class="fa fa-list"></i> <span>Artikelliste</span></a></li>
+                <li><a href="@controllers.routes.ArticleController.articlelist"><i class="fa fa-list"></i> <span>Artikelliste</span></a></li>
 
 
             </ul>
