- Kommentare und Rating view (Not Working)

--- a/app/views/articlelist.scala.html
+++ b/app/views/articlelist.scala.html
@@ -1,6 +1,6 @@
 @(articles: List[Article])
 
-@main("FiveHeads - Artikelliste") {
+@main("Artikelliste") {
 
     <div class="container"><!-- container -->
         <h1>Artikel in der Datenbank</h1>
