--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@main("FiveHeads - Willkommen") {
+@main("Willkommen") {
     <div class="container"><!-- container -->
 
         <h1>Willkommen - Prototyp 0.1</h1>
