--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>@title</title>
+	<title>fiveheads - @title</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Avant">
@@ -108,6 +108,7 @@
 
 
                 <li><a href="@controllers.routes.ArticleController.articlelist"><i class="fa fa-list"></i> <span>Artikelliste</span></a></li>
+                <li><a href="@controllers.routes.ArticleController.rating"><i class="fa fa-star-half-empty"></i> <span>Artikel bewerten</span></a></li>
 
 
             </ul>
