--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -5,19 +5,30 @@
 
     <h1>Bewerte einen Artikel und sammle Punkte</h1>
 
-    <div class="panel panel-primary">
-        <div class="panel-body">
-            <h3>Erste Version! Zur Zeit funktioniert:</h3>
-            <ul>
-                <li>Artikelliste (zeigt alle Artikel in der Datenbank)</li>
-                <li>Neue Artikel anlegen</li>
-                <li>Login/Logout (Nur ein User in der Datenbank, Registrierung noch nicht möglich)</li>
-            </ul>
+    <div class="col-md-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading ">
+                <h4>@article.title</h4>
+                <div class="options">
+                    <span class="text-right">@article.publicationDate.format("dd MMMM yyyy")</span>
+                </div>
+            </div>
+            <div class="panel-body">
 
-            <h3>ToDo:</h3>
-            <ul>
-                <li>five heads Logo entwerfen!</li>
-            </ul>
+                @article.content
+
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading ">
+
+                <div class="options">
+                    Fünf Sterne!
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
