--- a/app/views/article.scala.html
+++ b/app/views/article.scala.html
@@ -5,13 +5,30 @@
         <div class="panel-heading ">
             <h4>@article.title</h4>
             <div class="options">
-                <span class="text-right">@article.publicationDate.format("dd MMMM yyyy")</span>
+                <a href="javascript:;" class="panel-collapse"><i class="fa fa-chevron-down"></i></a>
+                <a href="javascript:;" >@article.publicationDate.format("dd MMMM yyyy")</a>
+
             </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body collapse in">
 
-            @article.content
+            @Html(article.content)
 
+            <div class="panel-footer">
+                <div class="pull-right">
+                    <a href="javascript:;" class="deleteModal-@article.id btn btn-danger-alt">Artikel löschen</a>
+                </div>
+            </div>
+
+            <script type="text/javascript">
+                $('.deleteModal-@article.id').click(function(){
+                    bootbox.confirm("<h3>Wollen Sie diesen Artikel wirklich löschen?</h3><br><div class='alert alert-dismissable alert-danger'>Bitte beachten Sie, dass alle Bewertungen zu diesem Artikel ebenfalls gelöscht werden!</div>", function(result) {
+                        if (result){
+                            window.location.href =  "@controllers.routes.ArticleController.delete(article.id)"
+                        }
+                    });
+                });
+            </script>
         </div>
     </div>
 </div>
