--- a/app/views/articlelist.scala.html
+++ b/app/views/articlelist.scala.html
@@ -11,6 +11,9 @@
         </div>
         <a href="@controllers.routes.ArticleController.newarticle" class="btn btn-default">Neuer Artikel</a>
         <a href="@controllers.routes.ArticleController.deleteAll" class="btn btn-default">Alle Löschen</a>
-    </div>
 
+        <script type="text/javascript" src="assets/plugins/form-toggle/toggle.min.js"></script>
+
+
+    </div>
 }
