--- a/app/views/user/register.scala.html
+++ b/app/views/user/register.scala.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <button class="btn btn-primary btn-block" type="submit">Login</button>
+                <button class="btn btn-primary btn-block" type="submit">Registrieren</button>
                 }
             </div>
 
