- Noch viele viele Änderungen inkl. Weka training

--- a/app/views/addarticle.scala.html
+++ b/app/views/addarticle.scala.html
@@ -43,6 +43,25 @@
                                 </div>
                             </div>
 
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label">Artikeltyp</label>
+                                <div class="col-sm-6">
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="type" id="typeUser" value="user">
+                                            Training
+                                        </label>
+                                    </div>
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" name="type" id="typeMaschine" value="maschine">
+                                            Bewertung
+                                        </label>
+                                    </div>
+                                    <p class="help-block">Wählen Sie <strong>"Training"</strong>, wenn der Artikel durch Benutzer bewertet werden soll.
+                                        Wenn der Artikel durch das neuronale Netz bewertet werden soll wählen Sie <strong>"Bewertung"</strong></p>
+                                </div>
+                            </div>
 
                             <div class="col-md-6 col-md-offset-3">
                                 <button class="btn btn-primary btn-default" type="submit">Speichern</button>
