--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -3,7 +3,7 @@
 @main("Artikel Bewerten") {
 <div class="container"><!-- container -->
 
-    <h1>Wie bewertest du diesen Artikel im Bezug zum Apple iPhone?</h1>
+    <h1>Wie bewertest du die Stimmung in diesem Artikel?</h1>
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-primary">
