--- a/app/views/user/register.scala.html
+++ b/app/views/user/register.scala.html
@@ -16,7 +16,7 @@
 
 <body class="focusedform">
 <div class="verticalcenter">
-
+    <a href="index.php"><img src="assets/img/logo-big.png" alt="Logo" class="brand"></a>
     <div class="panel panel-primary">
         <div class="panel-body">
             <h4 class="text-center" style="margin-bottom: 25px;">Registriere dich hier - alles was du brauchst ist eine E-Mail Adresse und ein Passwort.</h4>
